@@ -19,7 +19,7 @@ ROOT_ETC_DIR="$ROOTDIR/etc"
 ROOT_LOG_DIR="$ROOTDIR/logs"
 PROGNAME_FILE="$ROOT_BIN_DIR/$PROGNAME"
 VMARGS_FILE="$ROOT_ETC_DIR/vm.args"
-ERLCONFIG_FILE="$ROOT_ETC_DIR/app.config"
+ERLCONFIG_FILE="$ROOT_ETC_DIR/vm.config"
 TMPDIR="/tmp/$CLOUDI_NODE_NAME"
 PIPE_DIR="$TMPDIR/shell/"
 RUN_ERL_LOG_ACTIVITY_MINUTES="5"
