@@ -1,0 +1,2 @@
+# Erlang/OTP arguments specific to node @CLOUDI_NODE_NAME@
+
