@@ -1,5 +1,5 @@
 %-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
-%%! -config @prefix@/lib/cloudi-@VERSION@/etc/app.config -nocookie
+%%! -config @cloudi_confdir@/vm.config -nocookie
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
 
 -mode(compile).
