@@ -105,11 +105,17 @@
  [
   {mkdir, "etc"},
   {copy,
-   "@builddir@/rel/files/app.config",
-   "etc/app.config"},
-  {copy,
    "@builddir@/rel/files/vm.args",
    "etc/vm.args"},
+  {copy,
+   "@builddir@/rel/files/@CLOUDI_NODE_ARGS@",
+   "etc/@CLOUDI_NODE_NAME@.args"},
+  {copy,
+   "@builddir@/rel/files/vm.config",
+   "etc/vm.config"},
+  {copy,
+   "@builddir@/@CLOUDI_CONF@",
+   "etc/cloudi.conf"},
   {mkdir, "bin"},
   {copy,
    "@builddir@/rel/files/erl",
